syntax = "proto3";

package user.v1;

option go_package = "pkg/api";

import "google/protobuf/timestamp.proto";

service UserService {
	rpc RegisterViaTelegram(RegisterViaTelegramRequest) returns (User);
	rpc AuthorizeByAuthHeader(AuthorizeByAuthHeaderRequest) returns (User);

	rpc GetMe(Empty) returns (User);
	rpc GetUser(GetUserRequest) returns (UserPublic);
	rpc UpdateUser(UpdateUserRequest) returns (User);

	rpc UpdateTutorProfile(TutorProfile) returns (TutorProfile);
	rpc GetTutorProfileByUserId(GetTutorProfileByUserIdRequest) returns (TutorProfile);

	rpc GetTutorStudent(GetTutorStudentRequest) returns (TutorStudent);
	rpc CreateTutorStudent(CreateTutorStudentRequest) returns (TutorStudent);
	rpc UpdateTutorStudent(UpdateTutorStudentRequest) returns (TutorStudent);
	rpc DeleteTutorStudent(DeleteTutorStudentRequest) returns (Empty);

	rpc ListTutorStudents(ListTutorStudentsRequest) returns (ListTutorStudentsResponse);
	rpc ListTutorsForStudent(ListTutorsForStudentRequest) returns (ListTutorsForStudentResponse);

	rpc ResolveTutorStudentContext(ResolveTutorStudentContextRequest) returns (ResolvedTutorStudentContext);
}

// ==== REQUESTS ====

message RegisterViaTelegramRequest {
	string telegram_id = 1;
	string role = 2;
	optional string username = 3;
	optional string first_name = 4;
	optional string last_name = 5;
	optional string timezone = 6;
}

message AuthorizeByAuthHeaderRequest {
	string authorization_header = 1;
}

message GetUserRequest {
	string id = 1;
}

message UpdateUserRequest {
	string id = 1;
	optional string first_name = 2;
	optional string last_name = 3;
	optional string timezone = 4;
}

message GetTutorProfileByUserIdRequest {
	string user_id = 1;
}

message UpdateTutorProfileRequest {
	string user_id = 1;
	optional string payment_info = 2;
	optional int32 lesson_price_rub = 3;
	optional string lesson_connection_link = 4;
}

message GetTutorStudentRequest {
	string tutor_id = 1;
	string student_id = 2;
}

message CreateTutorStudentRequest {
	string tutor_id = 1;
	string student_id = 2;
	optional int32 lesson_price_rub = 3;
	optional string lesson_connection_link = 4;
}

message UpdateTutorStudentRequest {
	string tutor_id = 1;
	string student_id = 2;
	optional int32 lesson_price_rub = 3;
	optional string lesson_connection_link = 4;
	optional string status = 5;
}

message DeleteTutorStudentRequest {
	string tutor_id = 1;
	string student_id = 2;
}

message ListTutorStudentsRequest {
	string tutor_id = 1;
}

message ListTutorStudentsResponse {
	repeated TutorStudent students = 1;
}

message ListTutorsForStudentRequest {
	string student_id = 1;
}

message ListTutorsForStudentResponse {
	repeated TutorStudent tutors = 1;
}

message ResolveTutorStudentContextRequest {
	string tutor_id = 1;
	string student_id = 2;
}

message ResolvedTutorStudentContext {
	bool relationship_exists = 1;
	string relationship_status = 2; // invited / active / blocked / removed

	int32 lesson_price_rub = 3;
	string lesson_connection_link = 4;
	string payment_info = 5;
}

message Empty {}

// ==== MODELS ====

message User {
	string id = 1;
	string role = 2; // tutor / student
	string auth_provider = 3;
	string status = 4; // active / blocked / deleted
	optional string first_name = 5;
	optional string last_name = 6;
	optional string timezone = 7;
	google.protobuf.Timestamp created_at = 8;
	google.protobuf.Timestamp edited_at = 9;
}

message UserPublic {
	string id = 1;
	string role = 2;
	optional string first_name = 3;
	optional string last_name = 4;
}

message TutorProfile {
	string id = 1;
	string user_id = 2;
	optional string payment_info = 3;
	optional int32 lesson_price_rub = 4;
	optional string lesson_connection_link = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp edited_at = 7;
}

message TutorStudent {
	string id = 1;
	string tutor_id = 2;
	string student_id = 3;
	optional int32 lesson_price_rub = 4;
	optional string lesson_connection_link = 5;
	string status = 6; // invited / active / blocked / removed
	google.protobuf.Timestamp created_at = 7;
	google.protobuf.Timestamp edited_at = 8;
}
